--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "antd": "^5.2.3",
     "axios": "^1.3.4",
+    "braintree-web-drop-in-react": "^1.2.1",
     "cra-template": "1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
